weblogic-kube/ingress/traefik-ingress-prod-tele-domain-admin-server.yaml
# Copyright (c) 2020, 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-prod-tele-domain-admin-server
  namespace: prod-tele-domain-ns
  labels:
    weblogic.domainUID: prod-tele-domain
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  routes:
  - kind: Rule
    match: PathPrefix(`/console`)
    services:
    - kind: Service
      name: prod-tele-domain-admin-server
      port: 7001
