weblogic-kube/ingress/traefik-ingress-prod-tele-domain-cluster-cluster-1.yaml
# Copyright (c) 2020, 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

#
#  This is a Traefik ingress for service 'prod-tele-domain1-cluster-cluster-1'.
#
#  Sample curl access:
#
#   Using 'localhost':
#    curl -s -S -m 10 -H 'host: prod-tele-domain1-cluster-cluster-1.sample.org' \
#      http://localhost:30305/myapp_war/index.jsp
#                          - or -
#   Using 'machine host':
#    curl -s -S -m 10 -H 'host: prod-tele-domain1-cluster-cluster-1.sample.org' \
#      http://$(hostname).$(dnsdomainname):30305/myapp_war/index.jsp
#                          - or -
#   Using 'kubernetes cluster host':
#    curl -s -S -m 10 -H 'host: prod-tele-domain1-cluster-cluster-1.sample.org' \
#      http://$(kubectl cluster-info | grep KubeDNS | sed 's;^.*//;;' | sed 's;:.*$;;'):30305/myapp_war/index.jsp
#
#  If Traefik is unavailable and your admin server pod is running, try 'kubectl exec':
#
#    kubectl exec -n prod-tele-domain1-ns sample-domain1-admin-server -- bash -c \
#      "curl -s -S -m 10 http://prod-tele-domain1-cluster-cluster-1:8001/myapp_war/index.jsp"
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-prod-tele-domain-cluster-cluster-1
  namespace: prod-tele-domain-ns
  labels:
    weblogic.domainUID: prod-tele-domain
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  routes:
  - kind: Rule
    match: Host(`prod-tele-domain-cluster-cluster-1.sample.org`)
    services:
    - kind: Service
      name: prod-tele-domain-cluster-cluster-1
      port: 8001
